<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Ultimate Quiz</string>
    <string name="domain_name" translatable="false">http://192.168.43.170:8080</string>
    <string name="api_secret_key" translatable="false">todocode</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="startapp_app_id" translatable="false">205773214</string>
    <string name="google_client_id" translatable="false" tools:ignore="TypographyDashes">865760447601-tbvrj2qvh5393a8jis09alrddlglpsdk.apps.googleusercontent.com</string>
    <string name="facebook_app_id" translatable="false">998722760869867</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb998722760869867</string>
    <string name="instructions_page" translatable="false"><![CDATA[
<p>1/ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
<p>2/ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
<p>3/ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
<p>4/ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
<p>5/ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
<p>6/ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
<p>7/ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
<p>8/ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
<p>9/ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
<p>10/ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
]]></string>
    <string name="welcome_title">Start your adventure!</string>
    <string name="welcome_description">Registration takes only 1 minute</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="agree_with_terms">I agree with</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_here">Login here</string>
    <string name="create_account">Create Account</string>
    <string name="register_message">Registration is free and easy</string>
    <string name="reg_google">Register with Google</string>
    <string name="reg_facebook">Register with Facebook</string>
    <string name="reg_otp">Register with Phone N°</string>
    <string name="reg_email">Register with Email</string>
    <string name="already_member">Already Member ?</string>
    <string name="referral">Referral code</string>
    <string name="enter_referral">Enter referral code</string>
    <string name="skip_it">Skip</string>
    <string name="next_it">Next</string>
    <string name="referral_msg">If you have a referral code, enter it here to get a bonus points!</string>
    <string name="drawer_menu_profile">Profile</string>
    <string name="drawer_menu_categories">Categories</string>
    <string name="drawer_menu_leaderboards">Leaderboards</string>
    <string name="drawer_menu_statistics">Statistics</string>
    <string name="drawer_menu_invite">Invite Friends</string>
    <string name="drawer_menu_instructions">Instructions</string>
    <string name="drawer_menu_privacy">Privacy Policy</string>
    <string name="drawer_menu_terms">Terms of use</string>
    <string name="drawer_menu_rate">Rate this App</string>
    <string name="drawer_menu_share">Share this App</string>
    <string name="drawer_menu_report">Report a Bug</string>
    <string name="drawer_menu_contact">Contact us</string>
    <string name="drawer_menu_exit">Exit</string>
    <string name="options_rate">Rate us</string>
    <string name="options_profile">Profile</string>
</resources>