<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/options_rate"
        android:title="@string/options_rate"
        android:icon="@drawable/options_rate"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/options_statistics"
        android:title="@string/drawer_menu_statistics"
        android:icon="@drawable/ic_statistics_options"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/options_profile"
        android:title="@string/options_profile"
        android:icon="@drawable/options_profile"
        app:showAsAction="ifRoom" />
</menu>