<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".Activities.RegisterActivity">
    <ImageView
        android:id="@+id/wave2"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_wave_two"/>
    <ImageView
        android:id="@+id/wave"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:scaleType="centerCrop"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_wave_top"/>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/image"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@id/wave"
        android:layout_above="@id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:lottie_rawRes="@raw/reg"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:id="@+id/linear"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title"
            android:textSize="28sp"
            style="@style/IntroFontFamilyStyle"
            android:textAllCaps="false"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account" />
        <TextView
            android:id="@+id/description"
            android:layout_marginBottom="20dp"
            android:textAllCaps="false"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="@color/textSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_message" />
        <Button
            android:id="@+id/register_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic__google"
            android:paddingStart="17.5dp"
            android:paddingEnd="20dp"
            android:clickable="false"
            android:textSize="12sp"
            android:textStyle="bold"
            android:background="@drawable/login_btn"
            android:backgroundTint="#DB4437"
            android:textColor="@color/white"
            android:text="@string/reg_google"/>
        <Button
            android:id="@+id/register_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_facebook"
            android:paddingStart="17.5dp"
            android:paddingEnd="20dp"
            android:clickable="false"
            android:textSize="12sp"
            android:textStyle="bold"
            android:background="@drawable/login_btn"
            android:backgroundTint="#3b5998"
            android:textColor="@color/white"
            android:text="@string/reg_facebook"/>
        <Button
            android:id="@+id/register_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:drawableStart="@drawable/ic_phone"
            android:paddingStart="17.5dp"
            android:paddingEnd="20dp"
            android:clickable="false"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:background="@drawable/login_btn"
            android:backgroundTint="#25D366"
            android:textColor="@color/white"
            android:text="@string/reg_otp"/>
        <Button
            android:id="@+id/register_with_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:drawableStart="@drawable/ic_arroba"
            android:paddingStart="17.5dp"
            android:paddingEnd="20dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:background="@drawable/login_btn"
            android:backgroundTint="@color/secondary"
            android:textColor="@color/white"
            android:text="@string/reg_email"/>
        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:visibility="gone"
            android:layout_marginBottom="30dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_member"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginEnd="5dp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/login_here"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_here"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/accent"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>