<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/textSecondary"
    tools:context=".Activities.RandomCodeRegistrationActivity">

    <ImageView
        android:id="@+id/wave"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_wave_top"/>
    <LinearLayout
        android:id="@+id/linear"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:gravity="center"
        android:isScrollContainer="true"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:layout_marginBottom="20dp"
            android:textColor="@color/dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/referral" />
        <TextView
            android:id="@+id/description"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:layout_marginBottom="20dp"
            android:textColor="@color/secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/referral_msg" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/referral_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_referral"
            app:startIconDrawable="@drawable/ic_promo"
            app:startIconTint="@color/dark"
            android:textColorHint="@color/dark"
            app:boxStrokeColor="@color/dark"
            android:layout_marginBottom="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="textPersonName"
                android:textSize="14sp"
                android:singleLine="true"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/skip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/login_btn"
                android:backgroundTint="@color/secondary"
                android:textColor="@color/white"
                android:text="@string/skip_it"/>
            <Button
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:textStyle="bold"
                android:background="@drawable/login_btn"
                android:backgroundTint="@color/accent"
                android:textColor="@color/white"
                android:text="@string/next_it"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>