<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    android:gravity="center"
    tools:context=".Activities.WelcomeActivity">
    <ImageView
        android:id="@+id/wave2"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_wave_two"/>
    <ImageView
        android:id="@+id/wave"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:scaleType="centerCrop"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_wave_top"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@id/wave"
        android:layout_above="@id/linear"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:lottie_rawRes="@raw/winn"
            android:layout_marginBottom="20dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>
        <TextView
            android:id="@+id/title"
            android:textSize="28sp"
            android:gravity="center"
            style="@style/IntroFontFamilyStyle"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_title" />
        <TextView
            android:id="@+id/description"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:textColor="@color/textSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_description" />
    </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <Button
            android:id="@+id/welcome_register"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            style="@style/IntroFontFamilyStyle"
            android:drawableStart="@drawable/ic_add_profile"
            android:paddingStart="17.5dp"
            android:paddingEnd="20dp"
            android:clickable="false"
            android:textSize="16sp"
            android:background="@drawable/login_btn"
            android:backgroundTint="@color/accent"
            android:textColor="@color/white"
            android:text="@string/sign_up"/>
        <Button
            style="@style/IntroFontFamilyStyle"
            android:id="@+id/welcome_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textAllCaps="false"
            android:drawableStart="@drawable/ic_log_in"
            android:paddingStart="15dp"
            android:paddingEnd="20dp"
            android:textSize="16sp"
            android:background="@drawable/login_btn"
            android:backgroundTint="@color/secondary"
            android:textColor="@color/white"
            android:text="@string/sign_in"/>
        <LinearLayout
            android:id="@+id/forget_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/agree_with_terms"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/agree_with_terms"
                android:textSize="10sp"
                android:checked="true"
                android:textStyle="bold"
                android:layout_marginEnd="4dp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="10sp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/accent"
                android:text="@string/privacy_policy"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="10sp"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text=" and "/>
            <TextView
                android:id="@+id/terms_of_use"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="10sp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/accent"
                android:text="@string/terms_of_use"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>